--- a/focal/debian/changelog
+++ b/focal/debian/changelog
@@ -1,3 +1,9 @@
+gz-transport12 (12.2.1-1~focal) focal; urgency=medium
+
+  * gz-transport12 12.2.1-1 release
+
+ -- Addisu Z. Taddese <addisu@openrobotics.org>  Tue, 26 Sep 2023 17:02:55 -0500
+
 gz-transport12 (12.2.0-1~focal) focal; urgency=medium
 
   * gz-transport12 12.2.0-1 release
